--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <h2>Delicious</h2>
     
 
-<p >THE BEST FOOD BLOG ON THE WEB</p>
+<p class="upper">THE BEST FOOD BLOG ON THE WEB</p>
 </div>
 <div class="div2">
 <img src="img/fb-icon.png" alt="">
@@ -29,6 +29,7 @@
 <img src="img/mail-icon.png" alt="">
 </div>
     </header>
+    <div class="sep"></div>
     <main>
         <h1>chocolate Pizza</h1>
         <div class="div3">
@@ -72,6 +73,7 @@
             </div>
             </fieldset>
             </form>
+            <div class="sep"></div>
         <div class="div3">
         <img src="img/van-pic.png" alt="" class="van">
         <button>SHARE RECIPE</button>
@@ -83,9 +85,11 @@
     </main>
     <footer>
         <img src="img/small-logo.png" alt="" class="small">
-        <p>Delicious &copy; 2013 • All Rights Reserved. 
+        <div class="footer2">
+        <p class="p11">Delicious &copy; 2013 • All Rights Reserved. 
         </p>
         <p>Proudly published with Ghost. </p>
+    </div>
     </footer>
 </body>
 </html>
