removed negative margins ,grids and flexes

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="reset" href="reset.css"> -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="reset" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>chocolate-pizza</title>
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="logo" id="logo1">
+        <img src="./assets/logo.png" alt="logo" id="logo1">
   <div class="divheader"> 
     
        <h2>Delicious</h2>
@@ -19,27 +19,27 @@
 <p class="upper">THE BEST FOOD BLOG ON THE WEB</p>
 </div>
 <div class="div2">
-<img src="img/fb-icon.png" alt="">
-<img src="img/twit-icon.png" alt="">
-<img src="img/gp-icon.png" alt="">
-<img src="img/insta-icon.png" alt="">
-<img src="img/flic-icon.png" alt="">
-<img src="img/pint-icon.png" alt="">
-<img src="img/rss-icon.png" alt="">
-<img src="img/mail-icon.png" alt="">
+<img src="./assets/fb-icon.png" alt="">
+<img src="./assets/twit-icon.png" alt="">
+<img src="./assets/gp-icon.png" alt="">
+<img src="./assets/insta-icon.png" alt="">
+<img src="./assets/flic-icon.png" alt="">
+<img src="./assets/pint-icon.png" alt="">
+<img src="./assets/rss-icon.png" alt="">
+<img src="./assets/mail-icon.png" alt="">
 </div>
     </header>
-    <div class="sep"></div>
+    <div class="sep" id="sep1"></div>
     <main>
         <h1>chocolate Pizza</h1>
         <div class="div3">
         <P class="best">POSTED ON 15 DEC 2013/ DESSERTS</P>
-        <img src="img/print-icon.png" alt="" class ="print">
+        <img src="./assets/print-icon.png" alt="" class ="print">
     </div>
-        <img src="img/choco-pizza.png" alt="" class="hero">
-        <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
-        <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
-        <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/-10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+        <img src="./assets/choco-pizza.png" alt="" class="hero">
+        <p class="p1">For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+        <p class="p1">Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
+        <p class="p1">Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/-10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
         <form id="recipe">
             <fieldset>
            <div class="input1">
@@ -73,9 +73,10 @@
             </div>
             </fieldset>
             </form>
-            <div class="sep"></div>
+            <div class="sep" id="sep"></div>
+ <div id="fo">
         <div class="div3">
-        <img src="img/van-pic.png" alt="" class="van">
+        <img src="./assets/van-pic.png" alt="" class="van">
         <button>SHARE RECIPE</button>
         <h3>Vanessa Stevenson</h3>
         
@@ -84,12 +85,13 @@
         </div>
     </main>
     <footer>
-        <img src="img/small-logo.png" alt="" class="small">
+        <img src="./assets/small-logo.png" alt="" class="small">
         <div class="footer2">
         <p class="p11">Delicious &copy; 2013 • All Rights Reserved. 
         </p>
-        <p>Proudly published with Ghost. </p>
+        <p class="pp">Proudly published with Ghost. </p>
     </div>
     </footer>
+</div>
 </body>
 </html>
